--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@ name: Judaica
 ##Markdown processor
 markdown: kramdown
 ##syntax highlighter. change it to pygments
-highlighter: pygments
+highlighter: rouge
 
 ##define base_url for valid usage in sitemap.xml and robots.txt
-base_url: http://example.com
+base_url: http://jrcramer.github.io/judaica/
 sass:
   sass_dir: _sass
   style: :compressed
