--- a/_config.yml
+++ b/_config.yml
@@ -14,18 +14,19 @@ markdown_ext: "markdown,mkdown,mkdn,mkd,md,mmd"
 permalink: pretty
 
 social:
+- platform: "facebook"
+  user: "jaapcramer"
 - platform: "twitter"
   url: "twitter.com"
   user: "jaapcramer"
-- platform: "facebook"
-  url: "facebook.com"
+- platform: "soundcloud"
   user: "jaapcramer"
-- platform: "github"
-  url: "github.com"
-  user: "jrcramer"
 - platform: "youtube"
   url: "youtube.com"
   user: "jaapcramer"
 - platform: "instagram"
   url: "instagram.com"
   user: "jrcramer84"
+- platform: "github"
+  url: "github.com"
+  user: "jrcramer"
