minor edit, tags and post

--- a/_config.yml
+++ b/_config.yml
@@ -17,16 +17,17 @@ social:
 - platform: "facebook"
   user: "jaapcramer"
 - platform: "twitter"
-  url: "twitter.com"
   user: "jaapcramer"
-- platform: "soundcloud"
-  user: "jaapcramer"
-- platform: "youtube"
-  url: "youtube.com"
-  user: "jaapcramer"
-- platform: "instagram"
-  url: "instagram.com"
-  user: "jrcramer84"
+# - platform: "soundcloud"
+#   user: "jaapcramer"
+# - platform: "lastfm"
+#   url: "last.fm/user"
+#   user: "jrcramer"
+# - platform: "youtube"
+#   user: "jaapcramer"
+# - platform: "instagram"
+#   user: "jrcramer84"
+- platform: "linkedin"
+  user: "in/jaap-cramer-4139622a"
 - platform: "github"
-  url: "github.com"
   user: "jrcramer"
